--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>A D3 map</title>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="boston_neighborhoods.json"></script>
     <script src="boston_rodents.json"></script>
-    <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <style>
 body {
     position: absolute;
